[package]
name = "intmax-rollup-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
intmax-zkp-core = { git = "https://github.com/InternetMaximalism/intmax-zkp-core", rev = "2cf8a9a8e976b716ef2217cce77d458730458bb6" }
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1"
serde_json = "1.0"

[features]
parallel = ["intmax-zkp-core/parallel"]

[lib]
